[tool.poetry]
name = "misspelling"
version = "2.0.0"
description = "This is a Python library and tool to check for misspelled words in source code."
authors = ["Patrick Mazulo <pmazulo@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"

[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
/(
  | assets \
  | tests/assets \
  | .coverage \
  | .git \
  | .pytest_cache \
  | .github \
  | .coverage \
  | .gitignore \
  | .python-version \
  | .pylintrc
)/
'''
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"
