[tool.poetry]
name = "misspelling"
version = "2.0.9"
description = "This is a Python library and tool to check for misspelled words in source code."
authors = ["Patrick Mazulo <pmazulo@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
packages = [
    { include = "src" },
    { include = "src/misspelling_lib/*.py" },
    { include = "src/misspelling_lib/utils/*.py" },
]

[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
/(
  | assets \
  | tests/assets \
  | .coverage \
  | .git \
  | .pytest_cache \
  | .github \
  | .coverage \
  | .gitignore \
  | .python-version \
  | .pylintrc
)/
'''
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile="black"
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
ensure_newline_before_comments=true
line_length=120

[tool.semantic_release]
version_variable = [
    "src/misspelling_lib/utils/version.py:__version__",
    "pyproject.toml:version",
]
branch = "main"
changelog_file = "CHANGELOG.md"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
